Fix card height issue on iPhone SE screens

--- a/psybersimian-client/src/App.css
+++ b/psybersimian-client/src/App.css
@@ -167,3 +167,9 @@
     animation: expand 1s 1;
   }
 }
+
+@media (max-height: 667px) {
+  .card {
+    height: auto;
+  }
+}
